experimenting with changing href

--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -41,7 +41,7 @@ Equations</title>
 experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What is a System of Ordinary Differential
+<a class="activity card " href="whatIsASystem/whatIsASystem.html" data-options="">whatIsASystem/whatIsASystem<h2>What is a System of Ordinary Differential
 Equations</h2><h3>This activity describes what is a system of ordinary differential equations.
 </h3></a>
  
