--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -12,7 +12,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="497cac781fd3889443beae48ee57b2f43150c588 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="48c02c18940bf5d37b456fbf1ac3b23f48682206 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="ba87ca5059bb63718f3ec713b60f652530fa37cb whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="48c02c18940bf5d37b456fbf1ac3b23f48682206 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -41,8 +41,7 @@ Equations</title>
 experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="whatIsASystem/whatIsASystem.html" data-options="">whatIsASystem/whatIsASystem<h2>What is a System of Ordinary Differential
-Equations</h2><h3>This activity describes what is a system of ordinary differential equations.
+<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What is a System</h2><h3>This activity describes what is a system of ordinary differential equations.
 </h3></a>
  
  
