trying to bake ans serve again

--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -15,7 +15,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="de645d3d35ad5d465e804056d9285f30fa32e367 preamble.tex"/><meta name="dependency" content="3e41e95436041c8619ec7bc35aa0a3f01e61f868 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="1f32a981a70006f50366040aae7bc1a94c6b17e1 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="de645d3d35ad5d465e804056d9285f30fa32e367 preamble.tex"/><meta name="dependency" content="3e41e95436041c8619ec7bc35aa0a3f01e61f868 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="58514529092f17f51f27f753c1d29950bb8ffe82 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -176,7 +176,7 @@ Equations</title>
 experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What is a System</h2><h3>This activity describes what is a system of ordinary differential equations.
+<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem.tex<h2>What is a System</h2><h3>This activity describes what is a system of ordinary differential equations.
 </h3></a>
  
  
