--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -15,7 +15,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="15350850b90c46361c1616b4f44f5570554987a1 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="31afb613d429c1e7a9c5ff4e75f91eb876246c76 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="15350850b90c46361c1616b4f44f5570554987a1 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="9c3c7e245c89626252e107453265a350c3fd74cb systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -176,7 +176,7 @@ Equations</title>
 to be an experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem.tex<h2>What is a System</h2><h3>This activity describes what is a system of ordinary differential equations.
+<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What is a System</h2><h3>This activity describes what is a system of ordinary differential equations.
 </h3></a>
  
  
