removed explanation environment for problem 1 in whatIsASystem

--- a/whatIsASystem.html
+++ b/whatIsASystem.html
@@ -9,7 +9,7 @@
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="90e0436b561310d86ee9a5c1f703a50290cdfae4 whatIsASystem.tex"/></head><body> 
+<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="499d80fe7d077773a9620d01feb3c79f8571fe3f whatIsASystem.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -210,8 +210,8 @@ other. We make the following assumptions: </p>
      <li class="itemize">The effect of competition to each population is proportional to the product
      of the populations sizes, <script type="math/tex">xy</script>. We denote the corresponding proportionality
      constants for populations <script type="math/tex">x</script> and <script type="math/tex">y</script> by <script type="math/tex">b>0</script> and <script type="math/tex">d>0</script>, respectively.</li></ul>
-<div role="article" class="problem-environment question" id="problem2"><a id="x1-148r2"></a> <script type="math/tex">x'= \answer {ax-bxy}</script>
-</div> <div role="article" class="problem-environment question" id="problem3"><a id="x1-149r3"></a> <script type="math/tex">y'= \answer {cy-dxy}</script>
+<div role="article" class="problem-environment question" id="problem2"><a id="x1-148r2"></a> <script type="math/tex">x'= \answer {ax-cxy}</script>
+</div> <div role="article" class="problem-environment question" id="problem3"><a id="x1-149r3"></a> <script type="math/tex">y'= \answer {by-dxy}</script>
 </div>
 </div>
 <div class="theorem-like problem-environment explanation" id="problem4"><a id="x1-150r4"></a>In the absence of competition, the dynamics for each population is given by an
