Removed whatIsASystem directory

--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -15,7 +15,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="4c1a0500fe52d3960ffcaaed713888dc2a1b7d74 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="58d617726576d7f392583f3a72db8c34b00ca863 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="0745a18b4f1d3740e4e5c97994470cbb601bc3ac anotherActivity/anotherActivity.tex"/><meta name="dependency" content="710aa9c2cb65e6c4664d017c9a859ee94288cc73 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -176,7 +176,8 @@ Equations</title>
 to be an experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem</a>
+<a class="activity card " href="anotherActivity/anotherActivity" data-options="">anotherActivity/anotherActivity<h2>Another Activity</h2><h3>Another Ximera activity
+</h3></a>
  
  
 
