added two paragraphs to whatIsASystem.tex

--- a/whatIsASystem/whatIsASystem.html
+++ b/whatIsASystem/whatIsASystem.html
@@ -9,7 +9,7 @@
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="fc87ac7b88d28d22916d939275c1ad274f845bcb whatIsASystem/whatIsASystem.tex"/></head><body> 
+<meta name="dependency" content="41050799ccebf6157fc7f4c19103c8108cb4b4be whatIsASystem/whatIsASystem.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -29,7 +29,8 @@
 </div>
 <div class="abstract">
 <!--l. 5--><p class="noindent">Another Ximera activity
-</p></div>   <div class="maketitle"></div> 
+</p></div>   <div class="maketitle"></div>
+Trying to create a new activity.  
  
 
                                                                   
