--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -15,7 +15,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="0745a18b4f1d3740e4e5c97994470cbb601bc3ac anotherActivity/anotherActivity.tex"/><meta name="dependency" content="5179796e9db55fb17fd0fdb6b0a747a591a11496 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="46b4019a8183ecf8b814e4ecc485e9f7a1ec9845 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="8d50d7c71a8c50331c4e4b281c397eb39b2a3afb whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="58d617726576d7f392583f3a72db8c34b00ca863 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -176,8 +176,7 @@ Equations</title>
 to be an experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="anotherActivity/anotherActivity" data-options="">anotherActivity/anotherActivity<h2>Another Activity</h2><h3>Another Ximera activity
-</h3></a> <a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What Is A System</h2><h3>Another Ximera activity
+<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What Is A System</h2><h3>Introduces the notion of system of ODEs.
 </h3></a>
  
  
