--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -15,7 +15,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="6e4d8632464744f9f55c1f6452259808f1d54ad3 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="58d617726576d7f392583f3a72db8c34b00ca863 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="709fdf204b4ff0daaf40d168c58bf4f387a57e56 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="58d617726576d7f392583f3a72db8c34b00ca863 systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -176,7 +176,7 @@ Equations</title>
 to be an experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
-<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What Is A System</h2><h3>Introduces the notion of system of ODEs.
+<a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What Is A System of ODEs</h2><h3>Introduces the notion of system of ODEs.
 </h3></a>
  
  
