--- a/systemsOfOrdinaryDifferentialEquations.html
+++ b/systemsOfOrdinaryDifferentialEquations.html
@@ -15,7 +15,7 @@ Equations</title>
 <meta name="ximera" content="version 0.0.1"/> 
 <link href="https://ximera.osu.edu/public/stylesheets/standalone.css" rel="stylesheet" media="screen"/> 
 <script type="text/javascript" async="" src="https://ximera.osu.edu/public/javascripts/standalone.min.js"></script> 
-<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="709fdf204b4ff0daaf40d168c58bf4f387a57e56 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="bebb685c81b71c6adc78bb6a737388aec22e6bd4 springActivity/springActivity.tex"/><meta name="dependency" content="5a2a7f8146f4ad197ea7efd0d052a55a329eaa4d systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
+<meta name="dependency" content="6e145e32d3dd146e46615b74d8650830e570a1b2 preamble.tex"/><meta name="dependency" content="709fdf204b4ff0daaf40d168c58bf4f387a57e56 whatIsASystem/whatIsASystem.tex"/><meta name="dependency" content="2dcec41ddc6c49007e841d19e30bc585f10ee36e springActivity/springActivity.tex"/><meta name="dependency" content="5a2a7f8146f4ad197ea7efd0d052a55a329eaa4d systemsOfOrdinaryDifferentialEquations.tex"/></head><body> 
 <div class="preamble"><script type="math/tex">\newenvironment {prompt}{}{}
 \newcommand {\DeclareMathOperator }[2]{\@OldDeclareMathOperator {##1}{##2}\immediate \write \myfile {\unexpanded {\DeclareMathOperator }{\unexpanded {##1}}{\unexpanded {##2}}}}
 \newcommand {\ungraded }[0]{}
@@ -177,7 +177,7 @@ to be an experiment of setting up a course in Ximera.
 </p></div>
 <div class="maketitle"></div>
 <a class="activity card " href="whatIsASystem/whatIsASystem" data-options="">whatIsASystem/whatIsASystem<h2>What Is A System of ODEs</h2><h3>Introduces the notion of system of ODEs.
-</h3></a> <a class="activity card " href="springActivity/springActivity" data-options="">springActivity/springActivity<h2>What Is A System of ODEs</h2><h3>Spring activity by Justin
+</h3></a> <a class="activity card " href="springActivity/springActivity" data-options="">springActivity/springActivity<h2>Spring Activity</h2><h3>Spring activity by Justin
 </h3></a>  
  
 
